
	* src/common/na-about.c: Renamed as na-iabout.c.
	* src/common/na-about.h: Renamed as na-iabout.h.
	Defines the NAIAbout interface to let the implementor provides
	the actual application name.

	* src/common/Makefile.am:
	* src/nact/nact-application.c:
	* src/nact/nact-main-menubar.c:
	* src/nact/nact-main-window.c: Updated accordingly.

	* src/nact/nact-assistant-import.c:
	Import mode preference is now stored as a string.

	* src/plugin/nautilus-actions.c:
	Builds a hierachical menu for Nautilus context menu.

2009-09-28 Pierre Wieser <pwieser@trychlos.org>

	* data/nautilus-actions.schemas.in:
	Define a schema for the three new preferences.
	Update the schema with the new semantic of actions sorting.

	* src/common/na-gconf-utils.c:
	* src/common/na-gconf-utils.h
	(na_gconf_utils_read_int, na_gconf_utils_write_int): New functions.

	* src/common/na-object-api.h:
	* src/common/na-object-id-fn.h:
	* src/common/na-object-id.c (na_object_id_set_for_copy):
	Add a relabel argument.
	Remove useless debug trace.

	* src/common/na-iio-provider.c (na_iio_provider_get_items_tree):
	Dump the hierarchy tree before the alphabetical sort.
	Implement the new actions sorting semantic when loading the tree.
	Move the sorting functions to NAPivot class.

	* src/common/na-ipivot-consumer.c:
	* src/common/na-ipivot-consumer.h:
	Add new value to virtual functions arguments lists.

	* src/common/na-iprefs.c:
	* src/common/na-iprefs.h (na_iprefs_is_alphabetical_order):
	Renamed as na_iprefs_get_order_mode().
	Move NAIPrefs data to instance object.

	* src/common/na-pivot.c:
	* src/common/na-pivot.h
	(na_pivot_sort_alpha_asc, na_pivot_sort_alpha_desc): New functions.

	* src/nact/base-iprefs.c:
	* src/nact/base-iprefs.c (base_iprefs_get_bool,
	base_iprefs_set_bool):
	Replace the BaseWindow argument by a BaseIPrefs	one.
	Define three new UI preferences.

	* src/nact/nact-assistant-export.c:
	Implements IActionsList::get_treeview_name virtual function.